// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Error default correctly 1`] = `
<article
  className="container"
>
  <div
    className="wrapper"
  >
    <h3
      className="title"
    >
      An error occurred during rendering the chart
    </h3>
    <div>
      <div
        className="fetch"
      >
        <span
          className="SVGInline SVGInline--cleaned"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
        />
        <div
          className="fetchTitle"
        >
          error message
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`renders Error default correctly 2`] = `
<article
  className="container"
>
  <div
    className="wrapper"
  >
    <h3
      className="title"
    >
      No results
    </h3>
    <div>
      <div
        className="fetch"
      >
        <span
          className="SVGInline SVGInline--cleaned"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
        />
        <div
          className="fetchTitle"
        >
          error message
        </div>
      </div>
    </div>
  </div>
</article>
`;
